# question_gen_engine

./: .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  qt.json  requirements.txt  test_output.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  authentication.md  index.md  setup.md
docs/services/: export.md  generator.md  qbank.md
scripts/: build_docs.sh  create_admin.py  list_models.py  start_services.py  test_pdf_export.py  test_pdf_upload.py  verify_auth.py  verify_gemini.py  verify_gen.py  verify_microservices.py  verify_routing.py
src/app/: main.py
src/app/api/: routes.py
src/app/models/: generation_schema.py  question.py
src/app/services/: generator.py
src/services/auth/: main.py
src/services/gateway/: main.py
src/services/generator/: main.py  prompts.py  service.py  verify_config.py  verify_physics.py
src/services/generator/providers/: base.py  gemini.py  groq.py
src/services/qbank/: main.py
src/shared/: models.py
src/shared/core/: database.py
src/shared/models/: auth.py  generation_schema.py  question.py
src/shared/utils/: auth.py  pdf_generator.py  pdf_utils.py  text_utils.py  verify_pdf.py
tests/: conftest.py  test_api.py  test_language_chapter.py  test_text_utils.py
