[project]
name = "question-gen-engine"
version = "0.1.0"
description = "Question Generation Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "groq",
    "python-multipart",
    "requests",
    "pypdf",
    "python-dotenv",
    "PyYAML",
]

[dependency-groups]
dev = [
    "flake8",
    "pytest",
    "pytest-asyncio",
    "mkdocs",
    "mkdocs-material",
]
